--- a/package.json
+++ b/package.json
@@ -9,8 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mantine/core": "^7.3.2",
+    "@mantine/dates": "^7.3.2",
+    "@mantine/form": "^7.3.2",
+    "@mantine/hooks": "^7.3.2",
+    "date-fns": "^3.0.6",
+    "dayjs": "^1.11.10",
+    "geolib": "^3.3.4",
+    "json-server": "^0.17.4",
+    "mapbox-gl": "^3.0.1",
+    "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.4"
+    "react-icons": "^4.12.0",
+    "react-map-gl": "^7.1.7",
+    "react-redux": "^9.0.4",
+    "redux": "^5.0.1"
+  },
+  "devDependencies": {
+    "postcss": "^8.4.32",
+    "postcss-preset-mantine": "^1.12.2",
+    "postcss-simple-vars": "^7.0.1"
   }
 }
