--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "@mantine/core": "^7.3.2",
@@ -29,6 +30,7 @@
   "devDependencies": {
     "postcss": "^8.4.32",
     "postcss-preset-mantine": "^1.12.2",
-    "postcss-simple-vars": "^7.0.1"
+    "postcss-simple-vars": "^7.0.1",
+    "prettier": "^3.1.1"
   }
 }
